--- a/assets/style.css
+++ b/assets/style.css
@@ -7,6 +7,16 @@
     margin-bottom: 30px;
     padding: 10px;
 }
+
+.metric{
+    background-color: #217346;
+    border-radius: 5px;
+    box-shadow: 0 1px 2.94px 0.06px rgba(4,26,55,0.16);
+    border: none;
+    margin-bottom: 30px;
+    padding: 10px;
+}
+
 /* Card Title */
 .css-wvv94f{
     text-decoration: underline;
